src/test/ui/parser/issue-66357-unexpected-unreachable.stderr
error: expected one of `,` or `:`, found `(`
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:13
   |
LL | fn f() { |[](* }
   |             ^ expected one of `,` or `:`

error: expected one of `&`, `(`, `)`, `-`, `...`, `..=`, `..`, `[`, `_`, `box`, `const`, `mut`, `ref`, `|`, identifier, or path, found `*`
  --> $DIR/issue-66357-unexpected-unreachable.rs:14:14
   |
LL | fn f() { |[](* }
   |             -^ help: `)` may belong here
   |             |
   |             unclosed delimiter

error: aborting due to 2 previous errors

